Allow to break colon from the subtitle on the posts list

--- a/themes/kpumuk/assets/theme.css
+++ b/themes/kpumuk/assets/theme.css
@@ -279,6 +279,7 @@ article pre {
 
 .article-list article header p.subheading::before {
   content: ':';
+  word-break: break-all;
   padding-right: 1rem;
 }
 
