New post "On reproducible builds"

--- a/themes/kpumuk/assets/theme.css
+++ b/themes/kpumuk/assets/theme.css
@@ -174,7 +174,7 @@ pre {
  */
 pre .line {
   white-space: pre-wrap;
-  word-wrap: break-word;
+  word-break: break-all;
   padding-left: 1.5em;
   text-indent: -1.5em;
   overflow: hidden;
