Added a link to linkedin profile

--- a/themes/kpumuk/assets/theme.css
+++ b/themes/kpumuk/assets/theme.css
@@ -467,6 +467,10 @@ nav.online .online-mastodon {
   --url: url('/mastodon.svg');
 }
 
+nav.online .online-linkedin {
+  --url: url('/linkedin.svg');
+}
+
 nav.online .online-rss {
   --url: url('/rss.svg');
 }
