--- a/themes/kpumuk/assets/theme.css
+++ b/themes/kpumuk/assets/theme.css
@@ -438,7 +438,9 @@ nav.article-chain a.prev .marker {
 }
 
 nav.online {
-  display: block;
+  display: flex;
+  gap: 0.75rem;
+  justify-content: center;
 }
 
 nav.online a {
