--- a/themes/kpumuk/assets/theme.css
+++ b/themes/kpumuk/assets/theme.css
@@ -445,14 +445,26 @@ nav.online {
   margin: 0.25rem 0 0.75rem 0;
 }
 
-nav.online a {
+footer nav.online a {
   width: 3rem;
   height: 3rem;
   display: inline-block;
-  /* Painting the image by masking to switch color in Dark mode */
-  background-color: var(--footer-text-color);
-  -webkit-mask-image: var(--url);
-  mask-image: var(--url);
+  color: var(--footer-text-color);
+}
+
+nav.online a svg {
+  transition-property: margin-top;
+  transition-duration: 0.1s;
+  filter: drop-shadow(1px 2px 3px lch(4.86% 13.66 254.64 / 10%))
+    drop-shadow(2px 4px 6px lch(4.86% 13.66 254.64 / 10%))
+    drop-shadow(4px 8px 12px lch(4.86% 13.66 254.64 / 10%));
+}
+
+nav.online a:hover svg {
+  margin-top: -0.2rem;
+  filter: drop-shadow(1px 2px 3px lch(4.86% 13.66 254.64 / 30%))
+    drop-shadow(2px 4px 6px lch(4.86% 13.66 254.64 / 30%))
+    drop-shadow(4px 8px 12px lch(4.86% 13.66 254.64 / 30%));
 }
 
 article table {
