--- a/themes/kpumuk/layouts/partials/head.html
+++ b/themes/kpumuk/layouts/partials/head.html
@@ -9,10 +9,10 @@
   <!-- Meta -->
   {{ if eq .Kind "page" }}
   <meta name="description" content="{{ .Summary }}" />
-  <meta name="author" content="{{ .Params.Author | default site.Author.name }}" />
+  <meta name="author" content="{{ .Params.author | default site.Params.author.name }}" />
   {{ else }}
   <meta name="description" content="{{ site.Params.description }}" />
-  <meta name="author" content="{{ site.Author.name }}" />
+  <meta name="author" content="{{ site.Params.author.name }}" />
   {{ end }}
 
   <!-- Styles & Scripts -->
