--- a/themes/kpumuk/layouts/partials/head.html
+++ b/themes/kpumuk/layouts/partials/head.html
@@ -11,7 +11,7 @@
   <meta name="description" content="{{ .Summary }}" />
   <meta name="author" content="{{ .Params.author | default site.Params.author.name }}" />
   {{ else }}
-  <meta name="description" content="{{ site.Params.description }}" />
+  <meta name="description" content="{{ site.Params.author.bio }}" />
   <meta name="author" content="{{ site.Params.author.name }}" />
   {{ end }}
 
