--- a/themes/kpumuk/assets/theme.css
+++ b/themes/kpumuk/assets/theme.css
@@ -397,6 +397,15 @@ figure > figcaption {
   font-style: italic;
 }
 
+@media (min-width: 470px) {
+    figure.aside {
+        float: right;
+        width: 30%;
+        margin: 0 0 2rem 2rem;
+        min-width: 280px;
+    }
+}
+
 footer .copyright {
   margin: 0 auto;
 }
