--- a/themes/kpumuk/assets/theme.css
+++ b/themes/kpumuk/assets/theme.css
@@ -34,6 +34,7 @@ html {
   --footer-link-color: #fea2a9;
   --nav-item-bg-color: rgb(239.58, 238.59, 232.63);
   --shadow-color: #979797c0;
+  color-scheme: light dark;
 }
 
 @media (prefers-color-scheme: dark) {
